<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout="@layout/daybuttons" android:id="@+id/daytable"
	android:layout_gravity="bottom" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:layout_weight="1">
	<TableRow android:id="@+id/daytablerow" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1">
		<Button android:id="@+id/previous" android:text="@string/day_prev_action"
			android:layout_gravity="left|bottom" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1" />

		<Button android:id="@+id/today" android:text="@string/day_today_action"
			android:layout_gravity="center_horizontal|bottom"
			android:layout_width="0dip" android:layout_height="wrap_content"
			android:layout_weight="1" />

		<Button android:id="@+id/next" android:text="@string/day_next_action"
			android:layout_gravity="right|bottom" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1" />
	</TableRow>
</TableLayout>
